# chess-engine

./: Cargo.toml  NOTE
src/: main.rs
src/choose_move/: choose_move.rs  master.rs
src/extras/: en_passant.fen  games.txt  macros.rs  patterns.rs
src/find_moves/: all.rs  all_moves.rs  castling.rs  check.rs  knight.rs  pawn.rs  pieces.rs  sliding.rs  special.rs
src/parsing/: fen.rs  input.rs  startpos.rs  trace.rs
src/strings/: uci.txt
src/types/: defs.rs  impls.rs  traits.rs
src/types/impls/: board.rs  chess_move.rs  coord.rs  piece.rs  slider.rs  tile.rs
src/types/impls/board/: fmt.rs  helpers.rs  make_move.rs
